fix wrong font-size

--- a/difiks/app/sass/style.sass
+++ b/difiks/app/sass/style.sass
@@ -667,7 +667,6 @@ main.photo
 
   .about .container--small
     margin: 50px 25px 0
-    font-size: 21px
     flex-direction: column
     .col:first-child
       order: 1
